FO-1352 Fixed scrollbar and focus

--- a/src/app.less
+++ b/src/app.less
@@ -59,6 +59,11 @@ body {
   margin: 15px 2px;
 }
 
+.affix {
+  position: fixed;
+  width: inherit !important;
+}
+
 /* Responsive layout */
 @media screen and (max-width: 700px) {
   .column-icon-list {
