--- a/src/components/side-panel/side-panel.less
+++ b/src/components/side-panel/side-panel.less
@@ -10,8 +10,6 @@
   width: 100%;
   height: 100vh;
   padding: 30px 0 30px 0;
-  position: -webkit-sticky;
-  position: sticky;
   overflow-y: auto;
   overflow-x: hidden;
   top: -1px;
